Deleted old test, not working because of improvements/changes to methods. Changed the Main to be a demo for showcasing functionality. Final Commit